<resources>
    <string name="app_name">Game</string>
    <string name="start">START</string>
    <string name="instruction1">Welcome to Tic-Tac-Toe.</string>
    <string name="instruction2">Player 1 is X.</string>
    <string name="instruction3">Player 2 is 0.</string>
    <string name="instructionFinal">Enjoy!</string>
    <string name="blank">""</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>

</resources>
