<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/relBack"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttonStart"
        android:background="@color/orange"
        android:gravity="center_vertical"
        android:paddingLeft="36dp"
        android:paddingRight="0dp"
        android:width="120dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction1"
        android:id="@+id/textViewInst1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction2"
        android:id="@+id/textViewInst2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/textViewInst1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewInst1"
        android:layout_alignEnd="@+id/textViewInst1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction3"
        android:id="@+id/textViewInst3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/textViewInst2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewInst2"
        android:layout_alignEnd="@+id/textViewInst2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructionFinal"
        android:id="@+id/textViewInstFinal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/textViewInst3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewInst3"
        android:layout_alignEnd="@+id/textViewInst3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btnExit"
        android:layout_alignTop="@+id/buttonStart"
        android:layout_toRightOf="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart"
        android:background="@color/orange"
        android:width="120dp"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>
